--- a/src/index.scss
+++ b/src/index.scss
@@ -37,3 +37,7 @@ html {
 .ant-radio-button-wrapper::before {
     background: #00BDD6FF !important;
 }
+
+.ant-collapse-header {
+    align-items: center !important;
+}
